# MAVSDK

./: .gitmodules
examples/camera_definition/: CMakeLists.txt  camera_definition.cpp
examples/camera_definition/definition/: C10.xml
src/: mavsdk.pc.in
src/mavsdk/core/: mavlink_ftp_server.cpp  mavlink_parameter_server.cpp  stackoverflow_unistd.h  system_impl.h
src/mavsdk/plugins/camera/: camera.cpp  camera_impl.cpp  camera_impl.h
src/mavsdk/plugins/camera/include/plugins/camera/: camera.h
src/mavsdk/plugins/camera/mocks/: camera_mock.h
src/mavsdk/plugins/camera_server/: camera_server.cpp  camera_server_impl.cpp  camera_server_impl.h
src/mavsdk/plugins/camera_server/include/plugins/camera_server/: camera_server.h
src/mavsdk/plugins/param_server/: param_server.cpp  param_server_impl.cpp
src/mavsdk/plugins/param_server/include/plugins/param_server/: param_server.h
src/mavsdk/plugins/telemetry/: telemetry_impl.cpp
src/mavsdk_server/src/plugins/camera/: camera_service_impl.h
src/mavsdk_server/src/plugins/camera_server/: camera_server_service_impl.h
src/mavsdk_server/src/plugins/param_server/: param_server_service_impl.h
